--- a/packages/vuetify/src/components/VCalendar/_variables.scss
+++ b/packages/vuetify/src/components/VCalendar/_variables.scss
@@ -12,6 +12,8 @@ $calendar-daily-interval-gutter-align: right !default;
 $calendar-daily-interval-gutter-line-width: 8px !default;
 $calendar-daily-interval-gutter-font-size: 10px !default;
 
+$calendar-category-column-min-width: 200px !default;
+
 $calendar-weekly-weekday-padding: 0px 4px 0px 4px !default;
 $calendar-weekly-weekday-font-size: 11px !default;
 $calendar-weekly-day-padding: 0px 0px 0px 0px !default;
